--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "sample_app",
   "private": true,
+  "engines": {
+    "node": "16.x",
+    "npm": "8.1.x",
+    "yarn": "1.x"
+  },
   "dependencies": {
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
-    "@rails/webpacker": "4.2.2",
+    "@rails/webpacker": "5.4.3",
     "bootstrap": "3.4.1",
     "jquery": "3.4.1",
     "turbolinks": "^5.2.0"
